--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,10 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
+  dart_code_metrics: ^5.0.1
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
