--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,17 +9,28 @@ environment:
   sdk: ">=2.17.6 <3.0.0"
 
 dependencies:
+  # Navigation and DI
   flutter_modular: ^5.0.3
+  # Bloc
+  bloc: ^8.1.0
+  hydrated_bloc: ^9.0.0
+  flutter_bloc: ^8.1.1
+
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.7.0
+
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
-
 dev_dependencies:
-  flutter_lints: ^2.0.0
-  dart_code_metrics: ^5.0.1
   flutter_test:
     sdk: flutter
+  # dart_code_metrics: ^5.0.1
+  flutter_lints: ^2.0.1
+  build_runner:
+  bloc_test: ^9.1.0
+  freezed: ^2.2.0
+  json_serializable: ^6.5.4
 
 flutter:
   uses-material-design: true
