--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: ">=2.17.6 <3.0.0"
 
 dependencies:
+  path_provider: ^2.0.11
   # Navigation and DI
   flutter_modular: ^5.0.3
   # Bloc
