feat(initTheme): theme bloc implemented #1

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -6,6 +6,7 @@ analyzer:
 
   exclude:
     - "**/*.g.dart"
+    - "**/*.freezed.dart"
     - "**/*.mocks.dart"
     - "**/injection.config.dart"
     - "lib/injection.config.dart"
