--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,12 +6,13 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.6 <3.0.0"
+  sdk: ">=2.18.2 <3.0.0"
 
 dependencies:
   path_provider: ^2.0.11
   # Navigation and DI
   flutter_modular: ^5.0.3
+  modular_bloc_bind: ^1.0.1
   # Bloc
   bloc: ^8.1.0
   hydrated_bloc: ^9.0.0
@@ -26,12 +27,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  # dart_code_metrics: ^5.0.1
   flutter_lints: ^2.0.1
   build_runner:
   bloc_test: ^9.1.0
   freezed: ^2.2.0
   json_serializable: ^6.5.4
+  dart_code_metrics: ^4.19.2
 
 flutter:
   uses-material-design: true
