--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,17 +9,25 @@ environment:
   sdk: ">=2.18.2 <3.0.0"
 
 dependencies:
-  path_provider: ^2.0.11
-  # Navigation and DI
+
+  ### Google Dependencies ###
+
+  ### Core ###
   flutter_modular: ^5.0.3
   modular_bloc_bind: ^1.0.1
-  # Bloc
   bloc: ^8.1.0
   hydrated_bloc: ^9.0.0
   flutter_bloc: ^8.1.1
 
+  ### Network ###
+
+  ### Design ###
+
+  ### Utils ###
+  path_provider: ^2.0.11
   freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
+  storybook_flutter: ^0.11.3
 
   flutter:
     sdk: flutter
