--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -49,7 +49,7 @@ jobs:
     name: Deploy StoryBook
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+    #if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Download artifact
