feat(CICD): new workFlow Refs: #0

--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -35,4 +35,4 @@ jobs:
           targetBranch: gh-pages
           webRenderer: html
           baseHref: /flutter_devtools/
-          workingDir: storybook
+          customArgs: -t storybook/main.dart
