--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dev_dependencies:
   freezed: ^2.2.0
   json_serializable: ^6.5.4
   dart_code_metrics: ^4.19.2
+  mocktail: ^0.3.0
 
 flutter:
   uses-material-design: true
