--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -26,8 +26,11 @@ jobs:
       - name: Flutter Generate
         run: flutter pub run build_runner build --delete-conflicting-outputs
 
-      #- name: Flutter Generate Translation
-      #  run: flutter gen-l10n
+      - name: Flutter Generate Translation
+        run: flutter gen-l10n
+
+      - name: Flutter Test
+        run: flutter test --coverage --coverage-path ../coverage/lcov.info
 
       - name: Deploy Storybook
         uses: bluefireteam/flutter-gh-pages@v7
